--- a/schematics/tsconfig.json
+++ b/schematics/tsconfig.json
@@ -10,9 +10,9 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noUnusedLocals": true,
     "rootDir": "./src",
     "outDir": "../dist/schematics",
