--- a/schematics/tsconfig.json
+++ b/schematics/tsconfig.json
@@ -1,13 +1,35 @@
 {
-  "extends": "../tsconfig.base.json",
-  "files": [],
-  "include": [],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-  ]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "declaration": true,
+    "composite": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "rootDir": "./src",
+    "outDir": "../dist/schematics",
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strictNullChecks": false,
+    "target": "es2015",
+    "types": [
+      "node"
+    ]
+  },
+    "include": [
+      "./src/**/*.ts"
+    ],
+    "exclude": [
+      "./src/**/*.spec.ts"
+    ]
 }
