--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "ng serve",
-    "build": "ng build --with-deps",
+    "build": "ng build --with-deps && npm run build:schematics",
     "test": "nx run-many --all --target=test",
     "lint": "nx run-many --all --target=lint",
     "e2e": "ng e2e --with-deps",
